# food-fight

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  make.bat
assets/styles/: light.rgs
lib/raygui/: custom_file_dialog.c  floating_window.c  floating_window.h  gui_window_file_dialog.h
src/: arena.h  asset_manager.c  asset_manager.h  edit_mode.c  edit_mode.h  entity.c  entity.h  floating_window.c  game.c  game.h  gameover_screen.c  gameover_screen.h  gfx.c  gfx.h  input.c  input.h  level.c  level.h  main.c  main_menu_screen.c  main_menu_screen.h  physics.h  player.c  player.h  state.h  tilemap.c  tilemap.h  ui.c  ui.h  utils.c  utils.h
